---
source: tests/std140.rs
expression: "<<TestVec3 as AsStd140>::Std140Type as TypeLayout>::layout()"
---
name: Std140TestVec3
size: 28
alignment: 4
fields:
  - Field:
      name: _pos_align
      ty: "[u8 ; Std140TestVec3Alignment :: _pos_align()]"
      size: 0
  - Field:
      name: pos
      ty: "< Vec3 as :: crevice :: std140 :: AsStd140 > :: Std140Type"
      size: 12
  - Field:
      name: _velocity_align
      ty: "[u8 ; Std140TestVec3Alignment :: _velocity_align()]"
      size: 4
  - Field:
      name: velocity
      ty: "< Vec3 as :: crevice :: std140 :: AsStd140 > :: Std140Type"
      size: 12
